QtBeef/src/Qt/qmdisubwindow.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QMdiSubWindow
// --------------------------------------------------------------
[CRepr]
struct QMdiSubWindow_Ptr: void
{
}
extension CQt
{
	[LinkName("QMdiSubWindow_new")]
	public static extern QMdiSubWindow_Ptr* QMdiSubWindow_new(QWidget_Ptr* parent);
	[LinkName("QMdiSubWindow_new2")]
	public static extern QMdiSubWindow_Ptr* QMdiSubWindow_new2();
	[LinkName("QMdiSubWindow_new3")]
	public static extern QMdiSubWindow_Ptr* QMdiSubWindow_new3(QWidget_Ptr* parent, void* flags);
	[LinkName("QMdiSubWindow_Delete")]
	public static extern void QMdiSubWindow_Delete(QMdiSubWindow_Ptr* self);
	[LinkName("QMdiSubWindow_MetaObject")]
	public static extern QMetaObject_Ptr* QMdiSubWindow_MetaObject(QMdiSubWindow_Ptr* self);
	[LinkName("QMdiSubWindow_Qt_Metacast")]
	public static extern void* QMdiSubWindow_Qt_Metacast(QMdiSubWindow_Ptr* self, c_char* param1);
	[LinkName("QMdiSubWindow_Qt_Metacall")]
	public static extern c_int QMdiSubWindow_Qt_Metacall(QMdiSubWindow_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QMdiSubWindow_Tr")]
	public static extern libqt_string QMdiSubWindow_Tr(c_char* s);
	[LinkName("QMdiSubWindow_SizeHint")]
	public static extern QSize_Ptr QMdiSubWindow_SizeHint(QMdiSubWindow_Ptr* self);
	[LinkName("QMdiSubWindow_MinimumSizeHint")]
	public static extern QSize_Ptr QMdiSubWindow_MinimumSizeHint(QMdiSubWindow_Ptr* self);
	[LinkName("QMdiSubWindow_SetWidget")]
	public static extern void QMdiSubWindow_SetWidget(QMdiSubWindow_Ptr* self, QWidget_Ptr* widget);
	[LinkName("QMdiSubWindow_Widget")]
	public static extern QWidget_Ptr* QMdiSubWindow_Widget(QMdiSubWindow_Ptr* self);
	[LinkName("QMdiSubWindow_MaximizedButtonsWidget")]
	public static extern QWidget_Ptr* QMdiSubWindow_MaximizedButtonsWidget(QMdiSubWindow_Ptr* self);
	[LinkName("QMdiSubWindow_MaximizedSystemMenuIconWidget")]
	public static extern QWidget_Ptr* QMdiSubWindow_MaximizedSystemMenuIconWidget(QMdiSubWindow_Ptr* self);
	[LinkName("QMdiSubWindow_IsShaded")]
	public static extern bool QMdiSubWindow_IsShaded(QMdiSubWindow_Ptr* self);
	[LinkName("QMdiSubWindow_SetOption")]
	public static extern void QMdiSubWindow_SetOption(QMdiSubWindow_Ptr* self, QMdiSubWindow_SubWindowOption option);
	[LinkName("QMdiSubWindow_TestOption")]
	public static extern bool QMdiSubWindow_TestOption(QMdiSubWindow_Ptr* self, QMdiSubWindow_SubWindowOption param1);
	[LinkName("QMdiSubWindow_SetKeyboardSingleStep")]
	public static extern void QMdiSubWindow_SetKeyboardSingleStep(QMdiSubWindow_Ptr* self, c_int step);
	[LinkName("QMdiSubWindow_KeyboardSingleStep")]
	public static extern c_int QMdiSubWindow_KeyboardSingleStep(QMdiSubWindow_Ptr* self);
	[LinkName("QMdiSubWindow_SetKeyboardPageStep")]
	public static extern void QMdiSubWindow_SetKeyboardPageStep(QMdiSubWindow_Ptr* self, c_int step);
	[LinkName("QMdiSubWindow_KeyboardPageStep")]
	public static extern c_int QMdiSubWindow_KeyboardPageStep(QMdiSubWindow_Ptr* self);
	[LinkName("QMdiSubWindow_SetSystemMenu")]
	public static extern void QMdiSubWindow_SetSystemMenu(QMdiSubWindow_Ptr* self, QMenu_Ptr* systemMenu);
	[LinkName("QMdiSubWindow_SystemMenu")]
	public static extern QMenu_Ptr* QMdiSubWindow_SystemMenu(QMdiSubWindow_Ptr* self);
	[LinkName("QMdiSubWindow_MdiArea")]
	public static extern QMdiArea_Ptr* QMdiSubWindow_MdiArea(QMdiSubWindow_Ptr* self);
	[LinkName("QMdiSubWindow_WindowStateChanged")]
	public static extern void QMdiSubWindow_WindowStateChanged(QMdiSubWindow_Ptr* self, void* oldState, void* newState);
	[LinkName("QMdiSubWindow_AboutToActivate")]
	public static extern void QMdiSubWindow_AboutToActivate(QMdiSubWindow_Ptr* self);
	[LinkName("QMdiSubWindow_ShowSystemMenu")]
	public static extern void QMdiSubWindow_ShowSystemMenu(QMdiSubWindow_Ptr* self);
	[LinkName("QMdiSubWindow_ShowShaded")]
	public static extern void QMdiSubWindow_ShowShaded(QMdiSubWindow_Ptr* self);
	[LinkName("QMdiSubWindow_EventFilter")]
	public static extern bool QMdiSubWindow_EventFilter(QMdiSubWindow_Ptr* self, QObject_Ptr* object, QEvent_Ptr* event);
	[LinkName("QMdiSubWindow_Event")]
	public static extern bool QMdiSubWindow_Event(QMdiSubWindow_Ptr* self, QEvent_Ptr* event);
	[LinkName("QMdiSubWindow_ShowEvent")]
	public static extern void QMdiSubWindow_ShowEvent(QMdiSubWindow_Ptr* self, QShowEvent_Ptr* showEvent);
	[LinkName("QMdiSubWindow_HideEvent")]
	public static extern void QMdiSubWindow_HideEvent(QMdiSubWindow_Ptr* self, QHideEvent_Ptr* hideEvent);
	[LinkName("QMdiSubWindow_ChangeEvent")]
	public static extern void QMdiSubWindow_ChangeEvent(QMdiSubWindow_Ptr* self, QEvent_Ptr* changeEvent);
	[LinkName("QMdiSubWindow_CloseEvent")]
	public static extern void QMdiSubWindow_CloseEvent(QMdiSubWindow_Ptr* self, QCloseEvent_Ptr* closeEvent);
	[LinkName("QMdiSubWindow_LeaveEvent")]
	public static extern void QMdiSubWindow_LeaveEvent(QMdiSubWindow_Ptr* self, QEvent_Ptr* leaveEvent);
	[LinkName("QMdiSubWindow_ResizeEvent")]
	public static extern void QMdiSubWindow_ResizeEvent(QMdiSubWindow_Ptr* self, QResizeEvent_Ptr* resizeEvent);
	[LinkName("QMdiSubWindow_TimerEvent")]
	public static extern void QMdiSubWindow_TimerEvent(QMdiSubWindow_Ptr* self, QTimerEvent_Ptr* timerEvent);
	[LinkName("QMdiSubWindow_MoveEvent")]
	public static extern void QMdiSubWindow_MoveEvent(QMdiSubWindow_Ptr* self, QMoveEvent_Ptr* moveEvent);
	[LinkName("QMdiSubWindow_PaintEvent")]
	public static extern void QMdiSubWindow_PaintEvent(QMdiSubWindow_Ptr* self, QPaintEvent_Ptr* paintEvent);
	[LinkName("QMdiSubWindow_MousePressEvent")]
	public static extern void QMdiSubWindow_MousePressEvent(QMdiSubWindow_Ptr* self, QMouseEvent_Ptr* mouseEvent);
	[LinkName("QMdiSubWindow_MouseDoubleClickEvent")]
	public static extern void QMdiSubWindow_MouseDoubleClickEvent(QMdiSubWindow_Ptr* self, QMouseEvent_Ptr* mouseEvent);
	[LinkName("QMdiSubWindow_MouseReleaseEvent")]
	public static extern void QMdiSubWindow_MouseReleaseEvent(QMdiSubWindow_Ptr* self, QMouseEvent_Ptr* mouseEvent);
	[LinkName("QMdiSubWindow_MouseMoveEvent")]
	public static extern void QMdiSubWindow_MouseMoveEvent(QMdiSubWindow_Ptr* self, QMouseEvent_Ptr* mouseEvent);
	[LinkName("QMdiSubWindow_KeyPressEvent")]
	public static extern void QMdiSubWindow_KeyPressEvent(QMdiSubWindow_Ptr* self, QKeyEvent_Ptr* keyEvent);
	[LinkName("QMdiSubWindow_ContextMenuEvent")]
	public static extern void QMdiSubWindow_ContextMenuEvent(QMdiSubWindow_Ptr* self, QContextMenuEvent_Ptr* contextMenuEvent);
	[LinkName("QMdiSubWindow_FocusInEvent")]
	public static extern void QMdiSubWindow_FocusInEvent(QMdiSubWindow_Ptr* self, QFocusEvent_Ptr* focusInEvent);
	[LinkName("QMdiSubWindow_FocusOutEvent")]
	public static extern void QMdiSubWindow_FocusOutEvent(QMdiSubWindow_Ptr* self, QFocusEvent_Ptr* focusOutEvent);
	[LinkName("QMdiSubWindow_ChildEvent")]
	public static extern void QMdiSubWindow_ChildEvent(QMdiSubWindow_Ptr* self, QChildEvent_Ptr* childEvent);
	[LinkName("QMdiSubWindow_Tr2")]
	public static extern libqt_string QMdiSubWindow_Tr2(c_char* s, c_char* c);
	[LinkName("QMdiSubWindow_Tr3")]
	public static extern libqt_string QMdiSubWindow_Tr3(c_char* s, c_char* c, c_int n);
	[LinkName("QMdiSubWindow_SetOption2")]
	public static extern void QMdiSubWindow_SetOption2(QMdiSubWindow_Ptr* self, QMdiSubWindow_SubWindowOption option, bool on);
}
